Changed some pohotos and added new projects

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -19155,7 +19155,7 @@ h3.title-style {
   display: grid;
   align-items: center;
   min-height: 100vh;
-  background: url(../myimage/pernnaledt.jpeg) no-repeat center;
+  background: url(../myimage/title_image_2.jpg) no-repeat center;
   -ms-background-size: cover;
   background-size: cover;
   position: relative;
@@ -19501,7 +19501,7 @@ ul.single-info li p {
 .w3l-progress .progress-bar.gradient-1:before {
   content: "";
   position: absolute;
-  right: 70%;
+  right: 15%;
   top: 90%;
   border-radius: 50%;
   transform: translate(50%, -50%);
@@ -19517,7 +19517,7 @@ ul.single-info li p {
 .w3l-progress .progress-bar.gradient-2:before {
   content: "";
   position: absolute;
-  right: 25%;
+  right: 10%;
   top: 90%;
   border-radius: 50%;
   transform: translate(50%, -50%);
@@ -19533,7 +19533,7 @@ ul.single-info li p {
 .w3l-progress .progress-bar.gradient-3:before {
   content: "";
   position: absolute;
-  right: 80%;
+  right: 30%;
   top: 90%;
   border-radius: 50%;
   transform: translate(50%, -50%);
@@ -19549,7 +19549,7 @@ ul.single-info li p {
 .w3l-progress .progress-bar.gradient-4:before {
   content: "";
   position: absolute;
-  right: 90%;
+  right: 15%;
   top: 90%;
   border-radius: 50%;
   transform: translate(50%, -50%);
@@ -19569,25 +19569,25 @@ ul.single-info li p {
 .w3l-progress .info1 h6.progress-tittle {
   display: grid;
   grid-template-columns: 1fr auto;
-  width: 80%;
+  width: 135%;
 }
 
 .w3l-progress .info2 h6.progress-tittle {
   display: grid;
   grid-template-columns: 1fr auto;
-  width: 95%;
+  width: 110%;
 }
 
 .w3l-progress .info3 h6.progress-tittle {
   display: grid;
   grid-template-columns: 1fr auto;
-  width: 60%;
+  width: 105%;
 }
 
 .w3l-progress .info4 h6.progress-tittle {
   display: grid;
   grid-template-columns: 1fr auto;
-  width: 85%;
+  width: 140%;
 }
 
 /* //skills */
